--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary d-flex flex-direction-row ">
     <div class=" col-6 text-center">
-    <h1 class="text-primary-emphasis">TO DO LIST</h1>
+    <h1 class="text-light">TO DO LIST</h1>
 </div>
-    <div class="collapse navbar-collapse text-center " >
+    <div class="collapse navbar-collapse text-center d-flex flex-direction-row justify-content-center" >
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0 fs-3">
-        <li class="nav-item active">
-          <a class="nav-link text-primary-emphasis" routerLink="/todoform">Add </a>
+        <li class="nav-item active ">
+          <a class="nav-link text-light" routerLink="/todoform">Add </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary-emphasis" >Link</a>
+        <li class="nav-item ms-5">
+          <a class="nav-link text-light" routerLink="/todo-list">List</a>
         </li>
       </ul>
     </div>
