--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary d-flex flex-direction-row ">
-    <div class=" col-6 text-center">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-primary d-flex flex-direction-row ">
+  <div class=" col-6 text-center">
     <h1 class="text-light">TO DO LIST</h1>
-</div>
-    <div class="collapse navbar-collapse text-center d-flex flex-direction-row justify-content-center" >
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0 fs-3">
-        <li class="nav-item active ">
-          <a class="nav-link text-light" routerLink="/todoform">Add </a>
-        </li>
-        <li class="nav-item ms-5">
-          <a class="nav-link text-light" routerLink="/todo-list">List</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  </div>
+  <div class="collapse navbar-collapse text-center d-flex flex-direction-row justify-content-center">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 fs-3">
+      <li class="nav-item active ">
+        <a class="nav-link text-light" routerLink="/todoform">Add </a>
+      </li>
+      <li class="nav-item ms-5">
+        <a class="nav-link text-light" routerLink="/todo-list">List</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-  <router-outlet />
+<router-outlet /> -->
+
+
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
