--- a/src/app/todoform/todoform.component.html
+++ b/src/app/todoform/todoform.component.html
@@ -1,19 +1,20 @@
 <div class="container">
-    <div class="row d-flex flex-direction-row justify-content-center">
-        <div class="card bg-primary-subtle text-center mt-5 col-6 p-4">
-            <div class="card-header bg-primary text-light p-4">
-                <h4>ADD TO DO</h4>
-            </div>
-        
-            <div class="card">
-                <div class="card-body">
-                        <div class="card mb-3">
-                          <input type="text" class="form-control" placeholder="Add To Do" value="" [(ngModel)]="todo">
-                        </div>
-                        <button type="submit" class="btn btn-primary" (click)="addToDo()">Submit</button>
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+            <div class="card bg-primary-subtle text-center mt-5 shadow-sm p-0">
+                <div class="card-header bg-primary text-light py-3">
+                    <h4 class="mb-0">ADD TO DO</h4>
+                </div>
+
+                <div class="card-body p-4">
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Add To Do" [(ngModel)]="todo" />
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100" (click)="addToDo()">
+                        Submit
+                    </button>
                 </div>
             </div>
         </div>
-        
     </div>
 </div>
